fix: eliminate deprecated URL API